2016-11-11  Bruno Haible  <bruno@clisp.org>

	Modernize blurbs and comments.
	* COPYRIGHT: Update year.
	* SUMMARY: Remove outdated infos. Use https URLs where available.
	* unix/PLATFORMS: Trim list of platforms and hints. Mention
	GENERIC64_HEAPCODES.
	* lispbibl.d: Remove comment about old (now all museum) platforms.
	
2016-11-11  Bruno Haible  <bruno@clisp.org>

	Make GENERIC64{A,B}_HEAPCODES work with -falign-functions=4.
	* lispbibl.d (machinep) [GENERIC64A_HEAPCODES, GENERIC64B_HEAPCODES]:
	Define in such a way that machine pointers only need to be aligned
	mod 4.
	(C_CODE_ALIGNMENT) [GENERIC64A_HEAPCODES, GENERIC64B_HEAPCODES]: Don't
	redefine to 8.
	(LINUX_NOEXEC_HEAPCODES, GENERIC64A_HEAPCODES, GENERIC64B_HEAPCODES):
	Update comments.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Fix weird errors when rebuilding 'base' after having changed CFLAGS.
	* makemake.in (clean1): Remove also the .o files in the BASE_MODULES.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Fix a "No more room for LISP objects" error when building syscalls.
	The clisp modprep call now needs at least -m 1180KW.
	* modules/syscalls/Makefile.in (calls.m.c): Add option -m 2MW.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Make GENERIC64A_HEAPCODES work again after the type predicates change
	from 2016-11-10.
	* lispbibl.d (immediate_bias_mask) [HEAPCODES]: Define.
	(immediate_object_p) [HEAPCODES]: Define using immediate_bias_mask.
	(immediate_number_p, charp, small_read_label_p, systemp, if_realp,
	if_rationalp, integerp, fixnump, posfixnump, floatp, short_float_p)
	[HEAPCODES]: Use immediate_bias_mask instead of
	immediate_bias | nonimmediate_bias_mask.

2016-11-11  Bruno Haible  <bruno@clisp.org>

	Fix compilation error of DEBUG_BACKTRACE feature with C++ compiler.
	Fixes a regression introduced on 2008-01-09.
	* debug.d (print_bt_to_frame): Change type of bt_ parameter.

2016-11-10  Bruno Haible  <bruno@clisp.org>

	Remind user to use -falign-functions=8 with GENERIC64_HEAPCODES.